--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "mongodb": "^6.8.0",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
 }
